# autel-jpg-to-thermal

./: .gitignore  CMakeLists.txt  DLL_USAGE.md  README.md  USAGE_GUIDE.md  cpp_build_instuctions.txt  setup.py  thermal_converter.py  thermal_converter_gui.spec
autel_thermal_converter/: __init__.py  __main__.py  converter.py
include/: Autel_IrTempParser.h
old_files/: merge_thermal_with_exif.py  thermal_converter_gui.py  thermal_converter_gui.spec
old_files/src/: batch_ir2tif_old.cpp  main.cpp
src/: batch_ir2tif.cpp  lib_ir_converter.cpp
test/: test_python_API.py
